--- a/index.html
+++ b/index.html
@@ -628,33 +628,36 @@
 
       <div class="col-lg-7">
         <form action="https://formspree.io/f/manjrlpr" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-          <div class="row gy-4">
-            <div class="col-md-6">
-              <label for="name-field" class="pb-2">Your Name</label>
-              <input type="text" name="name" id="name-field" class="form-control" required>
-            </div>
+  <div class="row gy-4">
+    <div class="col-md-6">
+      <label for="name-field" class="pb-2">Your Name</label>
+      <input type="text" name="name" id="name-field" class="form-control" required>
+    </div>
 
-            <div class="col-md-6">
-              <label for="email-field" class="pb-2">Your Email</label>
-              <input type="email" name="email" id="email-field" class="form-control" required>
-            </div>
+    <div class="col-md-6">
+      <label for="email-field" class="pb-2">Your Email</label>
+      <input type="email" name="email" id="email-field" class="form-control" required>
+    </div>
 
-            <div class="col-md-12">
-              <label for="subject-field" class="pb-2">Subject</label>
-              <input type="text" name="subject" id="subject-field" class="form-control" required>
-            </div>
+    <div class="col-md-12">
+      <label for="subject-field" class="pb-2">Subject</label>
+      <input type="text" name="subject" id="subject-field" class="form-control" required>
+    </div>
 
-            <div class="col-md-12">
-              <label for="message-field" class="pb-2">Message</label>
-              <textarea name="message" id="message-field" rows="10" class="form-control" required></textarea>
-            </div>
+    <div class="col-md-12">
+      <label for="message-field" class="pb-2">Message</label>
+      <textarea name="message" id="message-field" rows="10" class="form-control" required></textarea>
+    </div>
 
-            <div class="col-md-12 text-center">
-              <button type="submit">Send Message</button>
-            </div>
-          </div>
-          <input type="hidden" name="https://aarnavdurm.github.io/vine/thankyou.html" value="https://aarnavdurm.github.io/vine/thankyou.html" />
-        </form>
+    <div class="col-md-12 text-center">
+      <button type="submit">Send Message</button>
+    </div>
+  </div>
+
+  <!-- ✅ Correct redirect line -->
+  <input type="hidden" name="_redirect" value="https://aarnavdurm.github.io/vine/thankyou.html" />
+</form>
+
       </div><!-- End Contact Form -->
 
     </div>
