--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
       </div>
 
       <div class="col-lg-7">
-        <form action="https://formspree.io/f/manjrlpr" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+        <form action="https://formspree.io/f/manjrlpr" method="POST" data-aos="fade-up" data-aos-delay="200">
   <div class="row gy-4">
     <div class="col-md-6">
       <label for="name-field" class="pb-2">Your Name</label>
@@ -650,13 +650,14 @@
     </div>
 
     <div class="col-md-12 text-center">
-      <button type="submit">Send Message</button>
+      <button type="submit" class="btn btn-dark">Send Message</button>
     </div>
   </div>
 
-  <!-- ✅ Correct redirect line -->
-  <input type="hidden" name="_redirect" value="https://aarnavdurm.github.io/vine/thankyou.html" />
+  <!-- Redirect to thank you page -->
+  <input type="hidden" name="_redirect" value="https://aarnavdurm.github.io/vine/thankyou.html">
 </form>
+
 
       </div><!-- End Contact Form -->
 
