--- a/index.html
+++ b/index.html
@@ -733,7 +733,26 @@
 }
   </style>
 
-
+<script>
+  const form = document.getElementById('contact-form');
+  form.addEventListener('submit', function (e) {
+    e.preventDefault();
+    const formData = new FormData(form);
+    fetch(form.action, {
+      method: 'POST',
+      body: formData,
+      headers: {
+        'Accept': 'application/json'
+      }
+    }).then(response => {
+      if (response.ok) {
+        window.location.href = 'https://aarnavdurm.github.io/vine/thankyou.html';
+      } else {
+        alert("There was a problem submitting your form.");
+      }
+    });
+  });
+</script>
 
 </body>
 
