--- a/index.html
+++ b/index.html
@@ -714,6 +714,23 @@
       }
     }, 'image/png');
   }
+
+  const form = document.getElementById('contact-form');
+  form.addEventListener('submit', function(event) {
+    event.preventDefault(); // prevent default form submit
+
+    fetch(form.action, {
+      method: 'POST',
+      body: new FormData(form),
+      headers: { 'Accept': 'application/json' }
+    }).then(response => {
+      if (response.ok) {
+        window.location.href = 'https://yourdomain.com/thankyou.html';
+      } else {
+        alert('Oops! There was a problem submitting your form');
+      }
+    }).catch(() => alert('Oops! There was a problem submitting your form'));
+  });
 </script>
 
   <style>
@@ -733,26 +750,6 @@
 }
   </style>
 
-<script>
-  const form = document.getElementById('contact-form');
-  form.addEventListener('submit', function (e) {
-    e.preventDefault();
-    const formData = new FormData(form);
-    fetch(form.action, {
-      method: 'POST',
-      body: formData,
-      headers: {
-        'Accept': 'application/json'
-      }
-    }).then(response => {
-      if (response.ok) {
-        window.location.href = 'https://aarnavdurm.github.io/vine/thankyou.html';
-      } else {
-        alert("There was a problem submitting your form.");
-      }
-    });
-  });
-</script>
 
 </body>
 
