--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
       </div>
 
       <div class="col-lg-7">
-        <form action="https://formsubmit.co/theviveofficial123@gmail.com" method="POST" data-aos="fade-up" data-aos-delay="200">
+        <form action="https://formspree.io/f/manjrlpr" method="POST" data-aos="fade-up" data-aos-delay="200">
   <div class="row gy-4">
     <div class="col-md-6">
       <label for="name-field" class="pb-2">Your Name</label>
