--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 
 
     <div class="social-links text-center">
-          <a href="https://twitter.com" class="twitter" target="_blank"><i class="bi bi-twitter-x"></i></a>
-    <a href="https://instagram.com/yourusername" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
-    <a href="https://linkedin.com/in/yourusername" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-    <a href="https://www.ebay.com/yourshop" target="_blank" class="ebay">
+       <a href="https://www.snapchat.com/@adixd08?share_id=QEWhZHq0t0M&locale=en-GB" class="snapchat" target="_blank"><i class="bi bi-snapchat"></i></a>
+    <a href="https:https://www.instagram.com/thevivevibe_2025/?utm_source=qr&igsh=MXZjZGQ3YmVveHd1MQ%3D%3D#" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+    <a href="https://www.linkedin.com/in/adi-dham-082a6621b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+    <a href="https://www.ebay.co.uk/usr/adidham?mkcid=16&mkevt=1&mkrid=711-127632-2357-0&ssspo=lwtmng8yt9y&sssrc=4623447&ssuid=lwtmng8yt9y&stype=1&widget_ver=artemis&media=WHATS_APP" target="_blank" class="ebay">
       <i class="fab fa-ebay"></i>
     </a>
-    <a href="https://www.vinted.com/yourshop" target="_blank" aria-label="Visit our Vinted shop" class="vinted-icon d-inline-flex align-items-center justify-content-center">
+    <a href="https://www.vinted.co.uk/member/145345024-adid262662" target="_blank" aria-label="Visit our Vinted shop" class="vinted-icon d-inline-flex align-items-center justify-content-center">
   <svg role="img" viewBox="0 0 24 24" width="20" height="20" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
     <title>Vinted</title>
     <path d="M19.316 0c-.258 0-.571.217-1.415.953-.3.108-.627.027-1.008.613-2.15 3.09-3.825 14.648-5.255 17.984-.286-1.444-.885-10.837-1.116-13.41-.028-.477.027-1.076.027-1.43 0-2.368-.516-3.567-2.886-3.567-1.198 0-2.382.436-3.008 1.226-.299.408-.409.708-.409 1.443 0 4.915 1.171 12.973 2.478 18.228C7.132 23.688 8.603 24 9.99 24c.654 0 1.307-.081 2.233-.544 3.212-1.567 4.07-5.84 4.9-9.993.15-.749.899-4.37 1.253-6.275.476-2.6 1.02-5.54 1.347-6.617C19.833.245 19.63 0 19.317 0z"/>
@@ -131,13 +131,13 @@
             <ul>
               <li><i class="bi bi-chevron-right"></i> <strong>Type:</strong> <span>Resale Brand</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>Founded:</strong> <span>2025</span></li>
-              <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Online Only</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Currently Online</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>Products:</strong> <span>Clothing, Books, Everyday Finds, Accessories</span></li>
             </ul>
           </div>
           <div class="col-lg-6">
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <strong>Audience:</strong> <span>Students & Smart Shoppers</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Audience:</strong> <span>Anyone Looking For a Good Deal</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>Mission:</strong> <span>Affordable, Sustainable, Reliable</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>Platform:</strong> <span>Vinted, eBay and More</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>Run By:</strong> <span>Student Team</span></li>
@@ -145,7 +145,7 @@
           </div>
         </div>
         <p class="py-3">
-          We believe every item deserves a second chance, and every shopper deserves great value. That’s why we’re passionate about reducing waste and making smart, sustainable choices easy.
+          We believe every item deserves a second chance, and every shopper deserves great value. That is why we are passionate about reducing waste and making smart, sustainable choices easy.
         </p>
       </div>
     </div>
