--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <div class="social-links text-center">
        <a href="https://www.snapchat.com/@adixd08?share_id=QEWhZHq0t0M&locale=en-GB" class="snapchat" target="_blank"><i class="bi bi-snapchat"></i></a>
-    <a href="https:https://www.instagram.com/thevivevibe_2025/?utm_source=qr&igsh=MXZjZGQ3YmVveHd1MQ%3D%3D#" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+    <a href="https://www.instagram.com/thevivevibe_2025/?utm_source=qr&igsh=MXZjZGQ3YmVveHd1MQ%3D%3D#" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
     <a href="https://www.linkedin.com/in/adi-dham-082a6621b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
     <a href="https://www.ebay.co.uk/usr/adidham?mkcid=16&mkevt=1&mkrid=711-127632-2357-0&ssspo=lwtmng8yt9y&sssrc=4623447&ssuid=lwtmng8yt9y&stype=1&widget_ver=artemis&media=WHATS_APP" target="_blank" class="ebay">
       <i class="fab fa-ebay"></i>
