--- a/index.html
+++ b/index.html
@@ -206,6 +206,43 @@
 
     </section><!-- /Stats Section -->
 
+    <!-- Meet the Team Section -->
+<section id="team" class="team section light-background">
+
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Meet the Team</h2>
+    <p>We're two student brothers on a mission to make resale smarter, cooler, and more sustainable.</p>
+  </div><!-- End Section Title -->
+
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <div class="row justify-content-center gy-4">
+
+      <!-- Team Member 1 -->
+      <div class="col-lg-4 col-md-6 d-flex">
+        <div class="member text-center">
+          <img src="assets/img/team-aarnav.jpg" class="img-fluid rounded-circle mb-3" alt="Aarnav">
+          <h4>Aarnav</h4>
+          <span>Co-Founder & Designer</span>
+          <p class="mt-2">Heads up branding, web design, and creative direction. Always tweaking things until they feel just right.</p>
+        </div>
+      </div>
+
+      <!-- Team Member 2 -->
+      <div class="col-lg-4 col-md-6 d-flex">
+        <div class="member text-center">
+          <img src="assets/img/team-adi.jpg" class="img-fluid rounded-circle mb-3" alt="Adi">
+          <h4>Adi</h4>
+          <span>Co-Founder & Sourcing Lead</span>
+          <p class="mt-2">Manages product finds, listings, and customer outreach. The sharp eye behind our shop's best drops.</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
 <!-- ======= Shop Section ======= -->
 <section id="shop" class="shop-section">
   <div class="container text-center" data-aos="fade-up">
