--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
     </section><!-- /Stats Section -->
 
-    <!-- Meet the Team Section -->
+ <!-- Meet the Team Section -->
 <section id="team" class="team section light-background">
 
   <!-- Section Title -->
@@ -219,9 +219,9 @@
     <div class="row justify-content-center gy-4">
 
       <!-- Team Member 1 -->
-      <div class="col-lg-4 col-md-6 d-flex">
+      <div class="col-lg-4 col-md-6 d-flex justify-content-center">
         <div class="member text-center">
-          <img src="assets/img/team-aarnav.jpg" class="img-fluid rounded-circle mb-3" alt="Aarnav">
+          <img src="assets/img/team-aarnav.jpg" class="img-fluid rounded-circle mb-3 team-photo" alt="Aarnav">
           <h4>Aarnav</h4>
           <span>Co-Founder & Designer</span>
           <p class="mt-2">Heads up branding, web design, and creative direction. Always tweaking things until they feel just right.</p>
@@ -229,9 +229,9 @@
       </div>
 
       <!-- Team Member 2 -->
-      <div class="col-lg-4 col-md-6 d-flex">
+      <div class="col-lg-4 col-md-6 d-flex justify-content-center">
         <div class="member text-center">
-          <img src="assets/img/team-adi.jpg" class="img-fluid rounded-circle mb-3" alt="Adi">
+          <img src="assets/img/team-adi.jpg" class="img-fluid rounded-circle mb-3 team-photo" alt="Adi">
           <h4>Adi</h4>
           <span>Co-Founder & Sourcing Lead</span>
           <p class="mt-2">Manages product finds, listings, and customer outreach. The sharp eye behind our shop's best drops.</p>
@@ -241,6 +241,7 @@
     </div>
   </div>
 </section>
+
 
 
 <!-- ======= Shop Section ======= -->
