--- a/index.html
+++ b/index.html
@@ -791,6 +791,13 @@
   width: 20px;
   height: 20px;
 }
+    .team-photo {
+  width: 180px;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 3px solid #ddd;
+}
   </style>
 
 
