--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <ul>
       <li><a href="#home" class="active"><i class="bi bi-house navicon"></i> Home</a></li>
       <li><a href="#aboutus"><i class="bi bi-person navicon"></i> About us</a></li>
+       <li><a href="#team"><i class="bi bi-people navicon"></i> Meet The Team</a></li>
       <li><a href="#shop"><i class="bi bi-cart navicon"></i> Shop</a></li>
       <li><a href="#featureditems"><i class="bi bi-bag navicon"></i> Featured Items</a></li>
       <li><a href="#ourprocess"><i class="bi bi-card-checklist navicon"></i> Our Process</a></li>
