--- a/index.html
+++ b/index.html
@@ -370,9 +370,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/Book1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Books 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/Book1.jpg" title="Branding 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <h4>Norman England</h4>
+                  <p>Norman England c1066-c1100 AQA GCSE History</p>
+                  <a href="assets/img/portfolio/Book1.jpg" title="Norman England c1066-c1100 AQA GCSE History Revision Guide" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                  
                 </div>
               </div>
